--- a/TFG.html
+++ b/TFG.html
@@ -32,6 +32,9 @@
 	RotateQ,
 	RotateEdge,
 	Identity = [[1,0,0], [0,1,0], [0,0,1]];
+	/*Tr,
+	RotateCenter,
+	RotateVertex;*/
 
 		 ///
 		// Definición de los vectores X, Y y Action
@@ -41,30 +44,42 @@
 
 		var color1, color2, border = 0;
 
-		var rectaActual, puntoActual, sentido = 1;
+		var rectaActual, puntoActual, puntoAnterior, sentido = 1;
 
 		ctx.clearRect(0, 0, canvas.width, canvas.height);
 		X = [], Y = [], X1 = [], Y1 = [], Action = [];
+		//rectaActual = undefined, puntoActual = undefined;
 
 		p = 10, q = 5, 		// parámetros p y q
 
 		nLayers = 0;			// Capas a dibujar
 
-		 centro = {x: 500, y: 350},
-		 centro0 = {x: 0, y: 0},		/// Centrar las rotaciones en el centro
-		 escala = 300;
+	 centro = {x: 500, y: 350},
+	 centro0 = {x: 0, y: 0},		/// Centrar las rotaciones en el centro
+	 escala = 300;
 
+	 		// Variables numéricas del artículo
+	 		/*let a = 1 - Math.tan(Math.PI / p) * Math.tan(Math.PI / q),												//// Variable de apoyo
+	 			 	s = Math.sqrt(a / (2 - a)),																											//// Vértice hiperbólico
+	 				h = s / a,																																			//// Altura del centro del lado de un polígono
+	 				r = Math.sqrt(h * h / ((Math.cos(Math.PI / p) * Math.cos(Math.PI / p))) - 1);		//// Radio de la circunferencia de un lado de un polígono
+
+	 		//console.log(s);
+	 		X.push(0);
+	 		Y.push(s);*/
 
 		if (border == 0 || border == 2){
 	 		var vertice = verticePoligonoCentral();
 
 	 		X.push(vertice.x);
 	 		Y.push(vertice.y);
+	 		//Action.push("Move");
 
 	 		for (let i = 1; i < p + 1; i++){
 	 			puntoRotado = rotatePoint(Y[0], X[0], 2 * Math.PI / p * i, centro0);
 	 			Y.push(puntoRotado.x);
 	 			X.push(puntoRotado.y);
+	 			//Action.push("Draw");
 			}
 		}
 
@@ -96,6 +111,7 @@
 
  		RotateP = matrixproduct(ReflectHypotenuse, ReflectEdgeBisector);		// 2 * Q
  		RotateQ = matrixproduct(ReflectPgonEdge, ReflectHypotenuse);			// P * 2
+ 		//RotateEdge = matrixproduct(ReflectPgonEdge, ReflectEdgeBisector);		// RotateEdge 1981 (este no está en 1986)
 
 		//******************************************************************
 		// llamada a la función principal
@@ -107,9 +123,10 @@
 		const snake_col = 'lightblue';
 		const snake_border = 'darkblue';
 
-		let paso = 0.02;
+		let paso = 0.04;
 		let changing_direction = false;
-		var puntoActualPoincare;
+		let puntoActualPoincare;
+		let cambio = false;
 
 		let snake = [{x: centro.x, y: centro.y},  {x: centro.x - 10, y: centro.y},
 								 {x: centro.x - 20, y: centro.y},  {x: centro.x - 30, y: centro.y}];
@@ -118,8 +135,10 @@
 			rectaActual = new Circunferencia(centro.x + escala, centro.y, centro.x - escala, centro.y, ctx, centro, escala, "Black", 1);
 		}
 
-		if (puntoActual == undefined)
+		if (puntoActual == undefined){
 			puntoActual = centro;
+			puntoAnterior = centro;
+		}
 
 		main2();
 
@@ -127,13 +146,14 @@
 
 		function main2() {
 				changing_direction = false;
-				setTimeout(function onTick() {
-				clearCanvas();
-				move_snake();
-				drawSnake();
-				// Call main again
-				main2();
-			      }, 250);
+        setTimeout(function onTick() {
+        clearCanvas();
+        move_snake();
+        drawSnake();
+				//console.log(puntoActual);
+        // Call main again
+        main2();
+      }, 400);
     }
 
 		// draw a border around the canvas
@@ -151,9 +171,8 @@
 
 			rectaActual.drawHyperbolicLine();
 			puntoActualPoincare = {x: linealTransformationInverse(puntoActual.x, escala, centro.x),
-					       y: linealTransformationInverse(puntoActual.y, escala, centro.y)};
+														 y: linealTransformationInverse(puntoActual.y, escala, centro.y)};
 			rectaActual.perpendicular(puntoActualPoincare).drawHyperbolicLine();
-			//console.log(rectaActual.perpendicular(puntoActualPoincare).radius());
 		}
 
 		// Draw the snake on the canvas
@@ -178,32 +197,110 @@
 
 		function move_snake() {
 			var xCoor, yCoor, t;
+
 			if (rectaActual.isDiameter()){
 				let vector_actual = {x:rectaActual.B().x - rectaActual.A().x,
-						     y:rectaActual.B().y - rectaActual.A().y};
+														 y:rectaActual.B().y - rectaActual.A().y};
 
-				t = (puntoActual.x - rectaActual.A().x) / vector_actual.x - sentido * paso;
+				let circunferenceAux = makeHyperbolicCircunference(puntoActual, paso, centro, escala);
+ 				circunferenceAux.radio *= escala;
 
-				xCoor = rectaActual.A().x + vector_actual.x * t;
-				yCoor = rectaActual.A().y + vector_actual.y * t;
+				ctx.beginPath();
+	   	  ctx.arc(circunferenceAux.centro.x, circunferenceAux.centro.y, circunferenceAux.radio, 0, 2 * Math.PI, false);
+	   	  ctx.strokeStyle = 'Purple';
+	   	  ctx.stroke();
+
+				let puntos = interseccion_recta_con_circunferencia(vector_actual, rectaActual.A(), circunferenceAux.centro, circunferenceAux.radio);
+
+				let t1 = (puntos.x.x - rectaActual.A().x) / vector_actual.x;
+				let t2 = (puntos.y.x - rectaActual.A().x) / vector_actual.x;
+
+				let tmax, tmin;
+
+				if (t1 > t2){
+					tmax = t1;
+					tmin = t2;
+				}
+
+				else {
+					tmax = t2;
+					tmin = t1;
+				}
+
+				if ((sentido == 1 /*&& tmax == t1) || (sentido == -1 && tmax == t2*/)){
+					xCoor = puntos.x.x;
+					yCoor = puntos.x.y;
+				}
+
+				else {
+					xCoor = puntos.y.x;
+					yCoor = puntos.y.y;
+				}
 			}
 
 			else {
-				t = angle(rectaActual.center().x, rectaActual.center().y, puntoActual.x, puntoActual.y) - sentido * paso;
+				var circunferenceAux = makeHyperbolicCircunference(puntoAnterior, paso, centro, escala);
+				circunferenceAux.radio *= escala;
 
-				xCoor = rectaActual.center().x + rectaActual.radius() * Math.cos(t);
-				yCoor = rectaActual.center().y + rectaActual.radius() * Math.sin(t);
+				ctx.beginPath();
+	   	  ctx.arc(circunferenceAux.centro.x, circunferenceAux.centro.y, circunferenceAux.radio, 0, 2 * Math.PI, false);
+	   	  ctx.strokeStyle = 'Purple';
+	   	  ctx.stroke();
+
+				let puntos = interseccion_circunferencia_con_circunferencia(circunferenceAux.centro, circunferenceAux.radio,
+																																		rectaActual.center(), rectaActual.radius());
+
+				let t1 = angle(rectaActual.center().x, rectaActual.center().y, puntos.x.x, puntos.x.y);
+				let t2 = angle(rectaActual.center().x, rectaActual.center().y, puntos.y.x, puntos.y.y);
+				let tmax, tmin;
+
+				if (t1 - t2 > 3 / 2 * Math.PI){
+					t1 -= 2 * Math.PI;
+				}
+
+				if (t2 - t1 > 3 / 2 * Math.PI){
+					t2 -= 2 * Math.PI;
+				}
+
+				if (t1 > t2){
+					tmax = t1;
+					tmin = t2;
+				}
+
+				else {
+					tmax = t2;
+					tmin = t1;
+				}
+				if ((sentido == 1 /*&& tmax == t1) || (sentido == -1 && tmax == t2*/)){
+					xCoor = puntos.x.x;
+					yCoor = puntos.x.y;
+				}
+
+				else {
+					xCoor = puntos.y.x;
+					yCoor = puntos.y.y;
+				}
 			}
+
+			puntoAnterior = puntoActual;
+
       // Create the new Snake's head
       const head = {x: xCoor, y: yCoor};
-
 			puntoActual = head;
+
+			if (cambio){
+				puntoAnterior = puntoActual;
+				cambio = false;
+			}
+
+			//console.log(sentido);
+
       // Add the new head to the beginning of snake body
       snake.unshift(head);
       snake.pop();
     }
 
-function change_direction(event) {
+		function change_direction(event) {
       const LEFT_KEY = 37;
       const RIGHT_KEY = 39;
 
@@ -216,14 +313,15 @@ function change_direction(event) {
       if (keyPressed === LEFT_KEY) {
         rectaActual = rectaActual.perpendicular(puntoActualPoincare);
 				sentido = 1;
+				cambio = true;
       }
 
       if (keyPressed === RIGHT_KEY) {
         rectaActual = rectaActual.perpendicular(puntoActualPoincare);
 				sentido = -1;
+				cambio = true;
       }
-
-}
+		}
 
 
 	function verticePoligonoCentral(){
@@ -390,7 +488,7 @@ function change_direction(event) {
 	// LLeva un punto del modelo de Weierstrass al disco de Poincaré
 	function applyF(x, y, z){
 		return [[x / (1 + z)],
-			[y / (1 + z)]];
+						[y / (1 + z)]];
 	}
 
 	//*******************************************************************************************
@@ -412,6 +510,7 @@ function change_direction(event) {
 
 		if (border == 0 || border == 2){
 			for (let i = 0; i < X.length; i++){
+
 					/// Vertices del polígono
 					let weierstrassCoordinates = applyG(X[i], Y[i]);
 					let Z = matrixproduct(transformation, weierstrassCoordinates);
@@ -431,6 +530,11 @@ function change_direction(event) {
 						var lineaHiperbolicaCenter = new Circunferencia(Tcenter[0][0], Tcenter[1][0], Tvertex[0][0], Tvertex[1][0], ctx, centro,
 							escala, "Grey", 1);
 						lineaHiperbolicaCenter.drawHyperbolicLine();
+
+						/*console.log(oldTx);
+						console.log(oldTy);
+						console.log(Tx);
+						console.log(Ty);*/
 					}
 
 					oldTvertex = Tvertex;
@@ -461,7 +565,7 @@ function change_direction(event) {
 						break;
 
 					default:
-						ctx.strokeStyle = Action[i];
+						ctx.strokeStyle = Action[i];		//Pinta los bordes del polígono
 						ctx.stroke();
 						if (i != X1.length)
 							ctx.beginPath();
@@ -479,6 +583,7 @@ function change_direction(event) {
 		let
 		RotateCenter,
 		RotateVertex,
+		//Tr,										/// Esta variable está definida en el artículo de 1981
 		i, j,
 		ExposedEdges,
 		PgonsPerVertex;
@@ -493,29 +598,36 @@ function change_direction(event) {
 				ExposedEdges = p - 3;
 				var Rotate3P = matrixproduct(Rotate2P, RotateP);
 
-				RotateCenter = matrixproduct(InitialTransformation,	Rotate3P);
+				RotateCenter = matrixproduct(InitialTransformation,	Rotate3P);	//// Esto está en el artículo de 1986
 			}
 
 			else if (Adyacency == "Vertex"){
 				ExposedEdges = p - 2;
 
-				RotateCenter = matrixproduct(InitialTransformation, Rotate2P);
+				RotateCenter = matrixproduct(InitialTransformation, Rotate2P);		//// Esto está en el artículo de 1986
 			}
 
 			else {
 				throw RangeError(`Adyacency has an incorrect value`);
 			}
 
-			for (i = 0; i < ExposedEdges; i++){
-				RotateVertex = matrixproduct(RotateCenter, RotateQ);
+			/*RotateCenter = matrixproduct(						///RotateP * RotateP * InitialTransformation
+				matrixproduct(RotateP, RotateP),				/// Esto está en el artículo de 1981
+				InitialTransformation);*/
 
-				ReplicatePattern(RotateVertex, Layerdiff - 1, "Edge");
+			for (i = 0; i < ExposedEdges; i++){
+				RotateVertex = matrixproduct(RotateCenter, RotateQ);			/// Esto está en el artículo de 1986
+
+				ReplicatePattern(RotateVertex,
+												Layerdiff - 1,
+												"Edge");			/// Esto está en el artículo de 1986
 
 				if (i < ExposedEdges - 1)					//// El -1 es para compensar que la i empieza en 0
 					PgonsPerVertex = q - 3;
 
 				else if (i == ExposedEdges - 1)					//// El -1 es para compensar que la i empieza en 0
 					PgonsPerVertex = q - 4;
+
 
 			for(j = 0; j < PgonsPerVertex; j++){
 				RotateVertex = matrixproduct(RotateVertex, RotateQ);
@@ -524,7 +636,7 @@ function change_direction(event) {
 					"Vertex");
 			}
 
-			RotateCenter = matrixproduct(RotateCenter, RotateP);
+			RotateCenter = matrixproduct(RotateCenter, RotateP);		/// Este for, junto con esta línea, están en el artículo de 1986
 
 			}
 		}
@@ -545,46 +657,54 @@ function change_direction(event) {
  	 ctx.strokeStyle = 'Blue';
  	 ctx.stroke();
 
+		//console.log(`X.length == ${X1.length}, p == ${p}`);
+
+		//console.log(`main(): p == ${p}`);
+
 		if (border == 1 || border == 2){
 			// Le añado un (0,0) a los puntos puesto que cuando llegue a este punto se eligirá el color
 			X1.push(0);
 			Y1.push(0);
-			Action.push("Purple");
+			Action.push("Purple");  // CUA: mejor adoptar política siempre tres 'Push' paralelos
 
 			const long_X_orig = X1.length;
 
 			if ( X1.length != Y1.length || X1.length != Action.length )
 				throw RangeError(`las longitudes de X/Y/Action no coinciden, están mal definidas`)
 
+
 		 /// Añado las rotaciones a los vectores X e Y (y Action)
-		 for (let i = 1; i < p; i++){
-			 for (let j = 0; j < long_X_orig; j++){ 
+		 for (let i = 1; i < p; i++){   // cambiar 'var' por 'let'
+			 for (let j = 0; j < long_X_orig; j++){     // CUA usar 'X.length' en lugar de exactamente '6'
 				 let puntoRotado = {x:0, y:0};
 
 				 if (j != long_X_orig - 1)				// Cuando sea Negro, se añade el punto (0,0)
-				 	puntoRotado = rotatePoint(X1[j], Y1[j], 2 * Math.PI / p * i, centro0);
+				 		puntoRotado = rotatePoint(X1[j], Y1[j], 2 * Math.PI / p * i, centro0);  // const en lugar de 'var'
 
 				 X1.push(puntoRotado.x);
 				 Y1.push(puntoRotado.y);
-				 Action.push(Action[j]) ;
+				 Action.push(Action[j]) ; //  CUA: mejor adoptar política siempre tres 'Push' paralelos
 			 }
 		 }
 	 }
 
 		 DrawPgonPattern(Identity);
 
-			if (nLayers > 0){					/// Para poder dibujar solo la primera capa (la capa 0)											// Artículo de 1981
+
+
+			if (nLayers > 0){					/// Para poder dibujar solo la primera capa (la capa 0)
+	
 
 			RotateCenter = Identity;
 
 			for (let i = 0; i < p; i++){
 				RotateVertex = matrixproduct(RotateCenter, RotateQ);
 
-				ReplicatePattern(RotateVertex, nLayers - 1, "Edge");				// En el artículo de 1986 pone nLayers - 2, me parece más lógico con -1
+				ReplicatePattern(RotateVertex, nLayers - 1, "Edge");			// En el artículo de 1986 pone nLayers - 2, me parece más lógico con -1
 
 				for (let j = 0; j < q - 3; j++){
 					RotateVertex = matrixproduct(RotateVertex, RotateQ);
-					ReplicatePattern(RotateVertex, nLayers - 1, "Vertex");			// En el artículo de 1986 pone nLayers - 2, me parece más lógico con -1
+					ReplicatePattern(RotateVertex, nLayers - 1, "Vertex");		// En el artículo de 1986 pone nLayers - 2, me parece más lógico con -1
 				}
 
 				RotateCenter = matrixproduct(RotateCenter, RotateP);
