--- a/TFG-both.html
+++ b/TFG-both.html
@@ -599,8 +599,8 @@
 		 }
 	 }
 
-	 console.log(X.length);
-	 console.log(X1.length);
+	 /*console.log(X.length);
+	 console.log(X1.length);*/
 		 DrawPgonPattern(Identity);
 
 
